--- a/Win10VLqL.yml
+++ b/Win10VLqL.yml
@@ -4,11 +4,11 @@ services:
     container_name: windows
     environment:
       VERSION: "10"
-      USERNAME: "Zuzzyyuu"
-      PASSWORD: "VlqL123"
-      RAM_SIZE: "4G"
+      USERNAME: "zilentvoid"
+      PASSWORD: "zilentvoid"
+      RAM_SIZE: "16G"
       CPU_CORES: "4"
-      DISK_SIZE: "500G"
+      DISK_SIZE: "1024G"
     devices:
       - /dev/kvm
       - /dev/net/tun
